--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ header>nav{
 .container{
     display: none;
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 18px;
+    right: 20px;
 }
 .bar1, .bar2, .bar3 {
     width: 35px;
